--- a/styles/sass/partials/_loading.scss
+++ b/styles/sass/partials/_loading.scss
@@ -92,7 +92,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 9999;
+	z-index: 10001009;
 	font-family: 'Open Sans', Helvetica Neueu, Helvetica, Arial, sans-serif;
 	font-weight: normal;
 }
